--- a/src/pages/main/main.component.html
+++ b/src/pages/main/main.component.html
@@ -1,3 +1,6 @@
-<div class="main-app-container">
+<div class="main-container">
+  <div class="header-wrapper w-100 position-fixed" *ngIf="!isShowHeader">
+    <app-header></app-header>
+  </div>
   <router-outlet></router-outlet>
 </div>
