--- a/src/pages/main/main.component.scss
+++ b/src/pages/main/main.component.scss
@@ -6,25 +6,10 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  .app-container {
-    margin: 0 auto;
-  }
-
-  @media screen and (max-width: 1200px) {
-    .app-container {
-      width: 100vw;
-    }
-  }
-
-  @media screen and (min-width: 1201px) and (max-width: 1500px) {
-    .app-container {
-      width: 1200px;
-    }
-  }
-
-  @media screen and (min-width: 1501px) {
-    .app-container {
-      width: 1500px;
-    }
+  .header-wrapper {
+    z-index: 20;
+    top: 0;
+    left: 0;
+    right: 0;
   }
 }
